ytst_caps_manager_represent_client: in Salut, remember caps, not just forms

Otherwise we lose our interest in services' statuses whenever a new
Ytstenut client is added - even if it's just a temporary one for the
request-and-handle pattern.

Reviewed-by: Olli Salli <olli.salli@collabora.co.uk>
Bug: https://bugs.freedesktop.org/show_bug.cgi?id=53167